update: made initial portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Fuad Olatunji | Software Engineer" />
     <meta
       name="description"
-      content="Fuad Olatunji's website"
+      content="I am a Software Engineer based in Lagos, Nigeria."
     />
     <meta name="author" content="Fuad Olatunji" />
 
